Fix layout bugs in material_apoio page

--- a/materiais_apoio/static/materiais_apoio/css/material_apoio.css
+++ b/materiais_apoio/static/materiais_apoio/css/material_apoio.css
@@ -16,7 +16,7 @@
 }
 
 body{
-    margin-top:75px;
+    margin-top:50px;
     background:var(--background);
     font-family:'Inter',sans-serif;
     color:var(--text);
